[gd_scene load_steps=24 format=3 uid="uid://sn4c65mnu2yd"]

[ext_resource type="Script" path="res://profile.gd" id="1_xlsgm"]
[ext_resource type="Texture2D" uid="uid://chstwrwam0ibi" path="res://resources/images/ui/bg-lab.jpg" id="2_osdcx"]
[ext_resource type="FontFile" uid="uid://dtd3tst48g77p" path="res://resources/fonts/mrsmonster.ttf" id="3_cj7ho"]
[ext_resource type="Texture2D" uid="uid://cdivp6mafh1sw" path="res://resources/images/ui/FM-logo-color.png" id="3_xxhfl"]
[ext_resource type="Texture2D" uid="uid://7bdu148lucdt" path="res://resources/images/avatars/chaos-hamster.png" id="5_gun64"]
[ext_resource type="PackedScene" uid="uid://vj00b71lugih" path="res://components/profile_avatar.tscn" id="5_qxaht"]
[ext_resource type="Texture2D" uid="uid://d0j477cin18u6" path="res://resources/images/ui/button-home-bg.png" id="6_el0sh"]
[ext_resource type="Texture2D" uid="uid://djsnktsc0jvmg" path="res://resources/images/avatars/broccolli.png" id="6_ochrr"]
[ext_resource type="Texture2D" uid="uid://boel53y0aaghm" path="res://resources/images/avatars/cat-wizard.png" id="7_7t7pd"]
[ext_resource type="Texture2D" uid="uid://clkvnv7i666l4" path="res://resources/images/ui/button-home-bg-hover.png" id="7_a3dpm"]
[ext_resource type="Script" path="res://src/GameLogic.gd" id="8_h3npy"]
[ext_resource type="Script" path="res://src/game/services/CardExecutorService.gd" id="9_jw1dw"]
[ext_resource type="Texture2D" uid="uid://bamg0uolmktpu" path="res://resources/images/avatars/cyber-deer.png" id="9_s76pw"]
[ext_resource type="Texture2D" uid="uid://k3fgvo6wba0r" path="res://resources/images/avatars/dark-yeti.png" id="10_ps7di"]
[ext_resource type="Script" path="res://src/game/services/DeckService.gd" id="10_qlh2l"]
[ext_resource type="Script" path="res://src/game/services/GameStateService.gd" id="11_e4lw7"]
[ext_resource type="Texture2D" uid="uid://5slkn7j2dgvd" path="res://resources/images/avatars/grass-dragon.png" id="11_fres1"]
[ext_resource type="Script" path="res://src/game/services/HandService.gd" id="12_50opq"]
[ext_resource type="Texture2D" uid="uid://dohbohm1q0rut" path="res://resources/images/avatars/pirate-kraken.png" id="12_edfed"]
[ext_resource type="Script" path="res://src/game/services/LocationService.gd" id="13_0g723"]
[ext_resource type="Texture2D" uid="uid://e21iqg12nlew" path="res://resources/images/avatars/astrounaut-mouse.png" id="13_n0ykn"]

[sub_resource type="LabelSettings" id="LabelSettings_uo8i2"]
font = ExtResource("3_cj7ho")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_sqg34"]
font = ExtResource("3_cj7ho")
font_size = 50
shadow_size = 12
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(1, 3)

[node name="Profile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xlsgm")

[node name="Bg" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_osdcx")

[node name="Control" type="Control" parent="Bg"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Bg/Control"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -79.5
offset_top = 250.0
offset_right = 79.5
offset_bottom = 288.0
grow_horizontal = 2
text = "YOUR NAME"
label_settings = SubResource("LabelSettings_uo8i2")

[node name="Label2" type="Label" parent="Bg/Control"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.0
offset_top = 420.0
offset_right = 92.0
offset_bottom = 458.0
grow_horizontal = 2
text = "YOUR AVATAR"
label_settings = SubResource("LabelSettings_uo8i2")

[node name="TextureRect" type="TextureRect" parent="Bg/Control"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 60.0
offset_right = 150.0
offset_bottom = 207.0
grow_horizontal = 2
texture = ExtResource("3_xxhfl")

[node name="LineEdit" type="LineEdit" parent="Bg/Control"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -240.0
offset_right = 190.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "Fluffy Rat"
alignment = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
caret_blink = true
caret_blink_interval = 0.5

[node name="GridContainer" type="GridContainer" parent="Bg/Control"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -261.0
offset_top = -60.0
offset_right = 261.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 14
columns = 4

[node name="Avatar1" parent="Bg/Control/GridContainer" instance=ExtResource("5_qxaht")]
avatar_texture = ExtResource("6_ochrr")

[node name="Avatar2" parent="Bg/Control/GridContainer" instance=ExtResource("5_qxaht")]
offset_left = 134.0
offset_right = 254.0
avatar_texture = ExtResource("7_7t7pd")

[node name="Avatar3" parent="Bg/Control/GridContainer" instance=ExtResource("5_qxaht")]
offset_left = 268.0
offset_right = 388.0
avatar_texture = ExtResource("5_gun64")

[node name="Avatar4" parent="Bg/Control/GridContainer" instance=ExtResource("5_qxaht")]
offset_left = 402.0
offset_right = 522.0
avatar_texture = ExtResource("9_s76pw")

[node name="Avatar5" parent="Bg/Control/GridContainer" instance=ExtResource("5_qxaht")]
offset_top = 124.0
offset_bottom = 244.0
avatar_texture = ExtResource("10_ps7di")

[node name="Avatar6" parent="Bg/Control/GridContainer" instance=ExtResource("5_qxaht")]
offset_left = 134.0
offset_top = 124.0
offset_right = 254.0
offset_bottom = 244.0
avatar_texture = ExtResource("11_fres1")

[node name="Avatar7" parent="Bg/Control/GridContainer" instance=ExtResource("5_qxaht")]
offset_left = 268.0
offset_top = 124.0
offset_right = 388.0
offset_bottom = 244.0
avatar_texture = ExtResource("12_edfed")

[node name="Avatar8" parent="Bg/Control/GridContainer" instance=ExtResource("5_qxaht")]
offset_left = 402.0
offset_top = 124.0
offset_right = 522.0
offset_bottom = 244.0
avatar_texture = ExtResource("13_n0ykn")

[node name="ProfileButton" type="TextureButton" parent="Bg/Control"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -205.5
offset_top = -250.0
offset_right = 205.5
offset_bottom = -137.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("6_el0sh")
texture_hover = ExtResource("7_a3dpm")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Bg/Control/ProfileButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -32.5
offset_right = 144.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
text = "SAVE"
label_settings = SubResource("LabelSettings_sqg34")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameLogic" type="Node" parent="."]
script = ExtResource("8_h3npy")

[node name="CardExecutorService" type="Node" parent="GameLogic"]
script = ExtResource("9_jw1dw")

[node name="DeckService" type="Node" parent="GameLogic"]
script = ExtResource("10_qlh2l")

[node name="GameStateService" type="Node" parent="GameLogic"]
script = ExtResource("11_e4lw7")

[node name="HandService" type="Node" parent="GameLogic"]
script = ExtResource("12_50opq")

[node name="LocationService" type="Node" parent="GameLogic"]
script = ExtResource("13_0g723")

[connection signal="pressed" from="Bg/Control/ProfileButton" to="." method="_on_profile_button_pressed"]
